# Agentic-AI-Doctor

./: .gitignore  README.md  config.json  flow.txt  pyproject.toml  template.py  train.py
src/components/: download_data_file.py  memory_for_llm.py
src/config/: __init__.py
src/constants/: __init__.py
src/pipeline/: stage01_data_ingestion.py  stage02_memory.py
