[project]
name = "agentic-ai-doctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "from-root>=1.3.0",
    "gdown>=5.2.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "python-box>=7.3.2",
    "requests>=2.32.4",
]
